Fixing tests, adding a bunch of new data types, and removing optionals